# scratch

./: .gitignore  README.md
boltzmann/: background.py  reionization.py  test_background.py
egraph/: core.py  readme.md  rewrite.py  test_egraph.py  visual.py
emulator/: core.py  demo.ipynb  network.py  readme.md  test_emulator.py
genetic/: genetic.py  lagrangian.py
gflownet/: model.py  utils.py
ilc/: readme.md  simple.py
ilc/data/: readme.md
jax/: jit_static_cache.py  readme.md
ksz/: rdp.py
lens_recon/: fastgl.py  glquad.py  glquad_fast.py  jaxell.py  make_lensed_sim.py  norm_lens.py  readme.md  recon_2d.py  recon_fullsky.py  wignerd.py  wignerd_comparison.jl
llm/picogpt2/: encoder.py  gpt2.py
metamorphism/: attempt1.py  attempt2.py  mocks.py  readme.md
nano-llm/: .gitignore  encoder.py  gpt2_1558m  readme.md
nano-llm/attempt1/: lib.jl  main.jl  test.jl  utils.jl
nano-llm/attempt2/: lib.jl  main.jl
nano-llm/attempt3/: data.jl  inference.jl  lib.jl  train.jl  utils.jl
python/: stages.py
quat/: conversions.py  coords.py  nutation.py  precession.py  quat_attempt1.py  quat_attempt2.py  readme.md  refraction.py
qwen/: core.py
rpca/: .gitignore  Cargo.toml  pyproject.toml
rpca/rpca/: __init__.py
rpca/src/: lib.rs  robust_pca.rs
rpca/tests/: test_performance.py  test_rpca.py
scheduler/: README.md  setup.py  test.py  test_ppo.py
tod/: cmb_utils.py  mapmaking.py  readme.md  tod_sim.py  tod_sim2.py
vae/: attempt1_nano.py
variational_inference/: attempt1.py  attempt2.py  attempt3.py
w3j_family/: core.py  readme.md
(+66 files in other folders)
