[package]
name = "rpca"
version = "0.1.0"
edition = "2021"
description = "Fast Rust implementation of Robust PCA with Python bindings"
authors = ["Rust RobustPCA"]
license = "MIT"

[lib]
name = "rpca"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
nalgebra = "0.32"
nalgebra-lapack = "0.12"
thiserror = "1.0"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"

[dev-dependencies]
approx = "0.5"
