[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rpca"
version = "0.1.0"
description = "Fast Rust implementation of Robust PCA with Python bindings"
authors = [
    {name = "Rust RobustPCA", email = "rpca@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
binding = "pyo3"
